<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mobile.apex.scrapbook21.MainActivity">
    <!-- tools:showIn="@layout/activity_main"> -->

    <EditText
        android:id="@+id/titleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/holiday_name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/notesView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/holiday_notes"/>

        <TextView
            android:id="@+id/startText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_text"
            />
        <EditText
            android:id="@+id/startDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_date"
            />
        <TextView
            android:id="@+id/endText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_text"
            />
        <EditText
            android:id="@+id/endDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_date"
            />
    </LinearLayout>


</LinearLayout>