<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mobile.apex.scrapbook21.MainActivity">
    <!-- tools:showIn="@layout/activity_main"> -->

    <EditText
        android:id="@+id/titleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:hint="Name your Holiday"
        android:textColorHint="#797979"
        android:inputType="text|number" />

    <EditText
        android:id="@+id/notesView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="What do you plan to do?"
        android:textColorHint="#797979"
        android:inputType="text|number" />

    <TextView
        android:id="@+id/startText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_text"/>

    <Button
        android:id="@+id/startDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:hint="@string/start_date" />

    <TextView
        android:id="@+id/endText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_text" />

    <Button
        android:id="@+id/endDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/end_date"
        android:gravity="end" />

</LinearLayout>